--- a/t.ipynb
+++ b/t.ipynb
@@ -2,6 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "tensor([ 0.0464,  0.0029,  0.0399,  0.0155, -0.0088,  0.0274,  0.0219, -0.0544,\n",
+      "        -0.0362, -0.0310, -0.0628,  0.0099, -0.0035,  0.0323, -0.0482,  0.0163,\n",
+      "         0.0115, -0.0004, -0.0094,  0.0077])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "x = torch.randn(10, 10)\n",
+    "\n",
+    "a = nn.Linear(10, 20)\n",
+    "b = nn.Linear(20, 10)\n",
+    "\n",
+    "loss = b(a(x).detach()).mean()\n",
+    "loss.backward()\n",
+    "\n",
+    "print(a.weight.grad)\n",
+    "print(b.weight.grad[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
