--- a/t.ipynb
+++ b/t.ipynb
@@ -2,6 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 2\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "with open(\"data/activitynet/gt.json\", 'rt') as f:\n",
+    "    data = json.load(f)['database']\n",
+    "\n",
+    "lengths = []\n",
+    "for vid in data.keys():\n",
+    "    classes = set()\n",
+    "    for anno in data[vid]['annotations']:\n",
+    "        classes.update([anno['label']])\n",
+    "    lengths.append(len(classes))\n",
+    "\n",
+    "import numpy as np\n",
+    "lengths = np.asarray(lengths)\n",
+    "print(np.min(lengths), np.max(lengths))\n",
+    "print(np.sum(lengths > 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
