--- a/t.ipynb
+++ b/t.ipynb
@@ -2,6 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([256])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "state_dict = torch.load('best/tadtr_256_twpool/model_best.pth')\n",
+    "print(state_dict['model'].keys())\n",
+    "# print(state_dict['model']['input_proj.0.0.weight'].size())\n",
+    "# print(state_dict['model']['input_proj.0.1'][0][1].weight.size())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
